# core

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  env.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yml  codeql-analysis.yml  coverage.yml  docs.yml  integrate.yml  lint.yml  test.yml
.yakrazor/: docker-compose.yml  yakrazor.json
announcements/: serializers.py  urls.py  views.py
announcements/migrations/: 0001_initial.py
authentication/: permissions.py  serializers.py  tests.py  urls.py  views.py
backend/: asgi.py  authentication.py  backends.py  exception_handler.py  exceptions.py  mail.py  mixins.py  permissions.py  renderers.py  response.py  settings.py  signals.py  throttling.py  urls.py  validators.py  viewsets.py
challenge/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
challenge/migrations/: 0001_initial.py  0002_auto_20200502_2254.py
challengeserver/: apps.py  urls.py  views.py
config/: backends.py  config.py  models.py  tests.py  urls.py  views.py
config/migrations/: 0001_initial.py
docs/: DEPLOY.md  redoc-index.html
entrypoints/: backend.sh  sockets.sh
hint/: apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
hint/migrations/: 0001_initial.py  0002_auto_20200502_2254.py
leaderboard/: serializers.py  views.py
member/: models.py  serializers.py  tests.py  urls.py  views.py
member/migrations/: 0001_initial.py  0002_auto_20200502_2254.py
plugins/: models.py  plugins.py  tests.py
plugins/flag/: base.py  hashed.py  long_text.py  map.py  plaintext.py  regex.py
plugins/points/: base.py  basic.py  decay.py
ractf/: apps.py
ractf/management/commands/: flush_db.py  insert_dummy_data.py  insert_mega_dummy_data.py
scorerecalculator/: apps.py  tests.py  urls.py  views.py
scripts/: clean_db.py  insert_fake_data.py
scripts/fake/: __init__.py  __main__.py  config.py  utils.py
src/: .coveragerc  gunicorn_config.py  manage.py  test_fixtures.json
src/achievements/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
src/achievements/migrations/: 0001_initial.py  0002_auto_20200911_1636.py  0003_achievement_type.py
src/admin/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/admin/migrations/: 0001_initial.py
src/admin/templatetags/: template_extras.py
src/andromeda/: apps.py  client.py  serializers.py  tests.py  urls.py  views.py
src/announcements/: models.py  serializers.py  urls.py  views.py
src/announcements/migrations/: 0001_initial.py
src/authentication/: apps.py  basic_auth.py  mixins.py  models.py  permissions.py  providers.py  serializers.py  tests.py  urls.py  views.py
src/authentication/logic/: utils.py
src/authentication/migrations/: 0001_initial.py  0002_invitecode_auto_team.py  0003_passwordresettoken.py  0004_auto_20200810_1111.py  0005_auto_20200813_2210.py  0006_auto_20200813_2217.py  0007_token.py  0008_auto_20200816_1827.py  0009_auto_20200831_2020.py  0010_auto_20210615_1726.py
src/authentication/tests/: factories.py  test_admin.py  test_login.py  test_password.py  test_register.py  utils.py
src/backend/: asgi.py  authentication.py  backends.py  exception_handler.py  exceptions.py  logging.py  mail.py  mixins.py  pagination.py  permissions.py  renderers.py  response.py  signals.py  storages.py  tests.py  throttling.py  urls.py  validators.py  views.py  viewsets.py  wsgi.py
src/challenge/: apps.py  models.py  permissions.py  serializers.py  signals.py  sql.py  tests.py  urls.py  views.py
src/challenges/: apps.py  models.py  permissions.py  serializers.py  signals.py  sql.py  urls.py  views.py
src/challengeserver/: apps.py  client.py  serializers.py  urls.py  views.py
src/config/: __init__.py  apps.py  backends.py  config.py  models.py  tests.py  urls.py  views.py
src/core/: apps.py  asgi.py  authentication.py  backends.py  base.py  exception_handler.py  exceptions.py  mail.py  mixins.py  pagination.py  permissions.py  plugins.py  providers.py  renderers.py  response.py  signals.py  storages.py  tests.py  throttling.py  types.py  urls.py  validators.py  views.py  viewsets.py  wsgi.py
src/experiments/: apps.py  tests.py  urls.py  views.py
src/hint/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
src/leaderboard/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/mail/: apps.py  urls.py  views.py
src/member/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/pages/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/plugins/: apps.py  base.py  exceptions.py  models.py  plugins.py  providers.py  tests.py
src/polaris/: apps.py  client.py  urls.py  views.py
src/ractf/: apps.py  tests.py
src/scorerecalculator/: apps.py  tests.py  urls.py  views.py
src/sockets/: apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
src/stats/: apps.py  signals.py  tests.py  urls.py  views.py
src/team/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
src/teams/: apps.py  models.py  urls.py  views.py
src/templates/: 2fa_removed.html  2fa_removed.txt  404.html  mail_list.html  password_reset.html  password_reset.txt  verify.html  verify.txt
src/websockets/: apps.py  consumers.py  routing.py  signals.py  workers.py
stats/: tests.py  urls.py  views.py
status/: urls.py  views.py
team/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
team/migrations/: 0001_initial.py
websockets/: apps.py  consumers.py
(+161 files in other folders)
