[tool.poetry]
name = "ractf-backend"
version = "0.1.0"
description = "The Django backend for RACTF."
authors = ["RACTF Admins <admins@ractf.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
channels-redis = "2.4.1"
Django = "^3.1"
django-cors-headers = "3.2.1"
django-redis = "4.11.0"
django-redis-cache = "2.1.1"
django-storages = "1.9.1"
django-zxcvbn-password-validator = "1.3.0"
djangorestframework = "3.11.1"
pyotp = "2.3.0"
sentry-sdk = "^0.16.3"
gunicorn = "^20.0.4"
boto3 = "^1.14.33"
psycopg2-binary = "^2.8.5"
django-filter = "^2.3.0"
sendgrid = "^6.4.7"
newrelic = "^5.22.1"
django-prometheus = "^2.1.0"
django-cachalot = "^2.3.5"
cachalot = "^1.5.0"
django-silk = "^4.1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
coverage = "^5.3.1"
django-stubs = "^1.7.0"
black = "^20.8b1"
djangorestframework-stubs = "^1.3.0"
PyYAML = "^5.4.1"
autoflake = "^1.4"

[tool.black]
exclude = 'migrations'

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
