[tool.poetry]
name = "ractf-backend"
version = "0.1.0"
description = "The Django backend for RACTF."
authors = ["RACTF Admins <admins@ractf.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
django-cors-headers = "^3.11"
django-redis = "^5.2"
django-redis-cache = "^3.0"
django-storages = "~1.12"
djangorestframework = "^3.13"
pyotp = "2.3.0"
gunicorn = "^22.0.0"
boto3 = "^1.14.33"
psycopg2-binary = "^2.8.5"
django-filter = "^2.3.0"
newrelic = "^5.22.1"
django-prometheus = "^2.2"
django-clacks = "^0.3"
django-cachalot = "^2.5"
django-silk = "^4.2"
serpy = "^0.3.1"
django-zxcvbn-password-validator = "^1.4"
sentry-sdk = "^1.14.0"
coverage = {extras = ["toml"], version = "^7.3"}
Twisted = "23.10.0"
channels-redis = "^3.2.0"
requests = "^2.31.0"
django-anymail = {extras = ["amazon_ses", "mailgun", "sendgrid", "console", "mailjet", "mandrill", "postal", "postmark", "sendinblue", "sparkpost"], version = "^8.5"}
uritemplate = "^4.1.1"
uvicorn = "^0.24.0.post1"

[tool.poetry.dev-dependencies]
ipython = "^8.10.0"
coverage = "^7.3"
django-stubs = "^1.7.0"
black = "^24.3"
djangorestframework-stubs = "^1.3.0"
PyYAML = "6.0.1"
autoflake = "^1.4"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
pytest-django = "^4.3.0"
isort = "^5.8.0"
pre-commit = "^2.13.0"
flake9 = "^3.8.3"
better-exceptions = "^0.3.3"
django-querycount = "^0.7.0"
nplusone = "^1.0.0"
faker = "^8.6.0"
docopt = "^0.6.2"

[tool.pytest.ini_options]
python_files = "tests.py test_*.py *_tests.py"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
  "*/venv/*",
  "backend/asgi.py",
  "backend/wsgi.py",
  "backend/exception_handler.py",
  "manage.py",
  "sockets/routing.py",
  "backend/settings/*",
  "backend/storages.py",
  "*/urls.py",
  "ractf/management/*",
  "gunicorn_config.py",
  "*/migrations/*.py"
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "pass"
]

[tool.black]
exclude = 'migrations'
line_length = 120

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
exclude = "*migrations*,*settings*"
ignore = "W503"
max-line-length = 200
max-complexity = 25

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
